commit al master del blog mas reciente

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post</title>
     <link rel="stylesheet" href="Css/estilos.css">
 </head>
+
 <body>
-    <h1>Inicio</h1>
-    <h2>Cosas del Post</h2>
+    <div id="container">
+        <div id="post">
+            <h1>Inicio</h1>
+            <p>Cosas del Post</p>
+        </div>
+
+    </div>
+
 </body>
+
 </html>
