--- a/Blogpost.html
+++ b/Blogpost.html
@@ -10,6 +10,9 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Inicio</h1>
             <p>Cosas del Post</p>
