final de cabecera

--- a/Blogpost.html
+++ b/Blogpost.html
@@ -11,10 +11,11 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            HyperBlog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
-            <h1>Inicio</h1>
+            <h1>Inicio de el super blog</h1>
             <p>Cosas del Post</p>
         </div>
 
