--- a/Blogpost.html
+++ b/Blogpost.html
@@ -13,6 +13,7 @@
         <div id="post">
             <h1>Inicio</h1>
             <p>Cosas del Post</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa vel pariatur fugiat esse consequuntur dolores quam animi voluptate necessitatibus, consequatur unde deleniti quia perspiciatis eos aspernatur minus tempore repellendus incidunt?</p>
         </div>
 
     </div>
