--- a/Blogpost.html
+++ b/Blogpost.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
             <h1>Inicio de el super blog</h1>
