--- a/Blogpost.html
+++ b/Blogpost.html
@@ -12,12 +12,15 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Inicio de el super blog</h1>
             <p>Cosas del Post</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa vel pariatur fugiat esse consequuntur dolores quam animi voluptate necessitatibus, consequatur unde deleniti quia perspiciatis eos aspernatur minus tempore repellendus incidunt?</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa vel pariatur fugiat esse consequuntur
+                dolores quam animi voluptate necessitatibus, consequatur unde deleniti quia perspiciatis eos aspernatur
+                minus tempore repellendus incidunt?</p>
+            <p>nada nada nada</p>
         </div>
 
     </div>
